--- a/Polling/Polling.Domain.csproj
+++ b/Polling/Polling.Domain.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\File.cs" />
+    <Compile Include="Entities\RequestFile.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
