--- a/Polling.Application/Polling.Application.csproj
+++ b/Polling.Application/Polling.Application.csproj
@@ -44,11 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IDateTime.cs" />
     <Compile Include="Interfaces\IFilingService.cs" />
     <Compile Include="Interfaces\ILoggingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UseCases\Commands\CreateRequestFile\CreateFileRequestValidator.cs" />
-    <Compile Include="UseCases\Commands\CreateRequestFile\CreateRequestFileHandler.cs" />
+    <Compile Include="UseCases\Commands\CreateRequestFile\CreateRequestFileCommand.cs" />
     <Compile Include="UseCases\Commands\DepositRequestFile\DepositFileRequestHandler.cs" />
     <Compile Include="UseCases\Commands\DepositRequestFile\DepositFileRequestValidator.cs" />
     <Compile Include="UseCases\Queries\PollRequestFile\PollRequestFileHandler.cs" />
