--- a/Polling.Infrastructure/Polling.Infrastructure.csproj
+++ b/Polling.Infrastructure/Polling.Infrastructure.csproj
@@ -86,8 +86,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoggingService\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DateTimeService\DateTimeService.cs" />
+    <Compile Include="Services\LoggingService\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Polling.Application\Polling.Application.csproj">
@@ -96,7 +97,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="FilingService\" />
+    <Folder Include="Services\FilingService\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
