Improved Folder Structure

--- a/Polling.Infrastructure/Polling.Infrastructure.csproj
+++ b/Polling.Infrastructure/Polling.Infrastructure.csproj
@@ -97,9 +97,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Services\FilePollingService\" />
     <Folder Include="Services\FilingService\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
