--- a/Polling.Application/packages.config
+++ b/Polling.Application/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MediatR" version="8.0.1" targetFramework="net461" />
+  <package id="MediatR.Extensions.Microsoft.DependencyInjection" version="8.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
 </packages>
