--- a/Polling/Polling.Domain.csproj
+++ b/Polling/Polling.Domain.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\AuditableEntity.cs" />
     <Compile Include="Entities\RequestFile.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
