--- a/src/Infrastructure/Polling.Infrastructure/Polling.Infrastructure.csproj
+++ b/src/Infrastructure/Polling.Infrastructure/Polling.Infrastructure.csproj
@@ -91,7 +91,7 @@
     <Compile Include="Services\LoggingService\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Polling.Application\Polling.Application.csproj">
+    <ProjectReference Include="..\..\Application\Polling.Application\Polling.Application.csproj">
       <Project>{8e8c5050-a6ff-4a72-8249-eb2933cdb946}</Project>
       <Name>Polling.Application</Name>
     </ProjectReference>
