--- a/src/Infrastructure/Polling.Infrastructure/Polling.Infrastructure.csproj
+++ b/src/Infrastructure/Polling.Infrastructure/Polling.Infrastructure.csproj
@@ -86,6 +86,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="File\FilePolling\FilePolling.cs" />
+    <Compile Include="File\FileWriting\FileWriting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DateTimeService\DateTimeService.cs" />
     <Compile Include="Services\LoggingService\Logger.cs" />
@@ -95,11 +97,12 @@
       <Project>{8e8c5050-a6ff-4a72-8249-eb2933cdb946}</Project>
       <Name>Polling.Application</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Domain\Polling.Domain\Polling.Domain.csproj">
+      <Project>{d611b2ee-81de-4456-91eb-b06660afc85c}</Project>
+      <Name>Polling.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\FilePollingService\" />
-    <Folder Include="Services\FilingService\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
